Bug fix, add tool.py and update codes for the use of submodule 'em'

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [CQT]
 feature_name = npy_cqt
+feature_folder = npy_lfcc
 file_extension = npy
 dim_f = 863
 dim_t = 600
@@ -9,6 +10,7 @@ power = 1
 
 [LFCC]
 feature_name = npy_lfcc
+feature_folder = npy_lfcc
 file_extension = npy
 dim_f = 60
 dim_t = 600
@@ -18,6 +20,7 @@ power = 1
 
 [DCT]
 feature_name = dctgram
+feature_folder = flac
 file_extension = flac
 samplerate = 16000
 n_fft = 863
@@ -32,6 +35,7 @@ power = 1
 
 [Spec]
 feature_name = spectrogram
+feature_folder = flac
 file_extension = flac
 samplerate = 16000
 n_fft = 1024
@@ -46,6 +50,7 @@ power = 1
 
 [Ceps]
 feature_name = cepstrogram
+feature_folder = flac
 file_extension = flac
 samplerate = 16000
 n_fft = 1024
