--- a/config.ini
+++ b/config.ini
@@ -48,6 +48,21 @@ dim_t_max = 3700
 dim_t_shf = 300
 power = 1
 
+[Spec1724]
+feature_name = spectrogram
+feature_folder = flac
+file_extension = flac
+samplerate = 16000
+n_fft = 1724
+win_length = 1724
+hop_length = 128
+window_fn = blackman
+dim_f = 513
+dim_t = 600
+dim_t_max = 3700
+dim_t_shf = 300
+power = 1
+
 [Ceps]
 feature_name = cepstrogram
 feature_folder = flac
@@ -61,4 +76,29 @@ dim_f = 513
 dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
+power = 1
+
+[Ceps1724]
+feature_name = cepstrogram
+feature_folder = flac
+file_extension = flac
+samplerate = 16000
+n_fft = 1724
+win_length = 1724
+hop_length = 128
+window_fn = blackman
+dim_f = 513
+dim_t = 600
+dim_t_max = 3700
+dim_t_shf = 300
+power = 1
+
+[TAC]
+feature_name = npy_TAC
+feature_folder = npy_TAC
+file_extension = npy
+dim_f = 513
+dim_t = 16
+dim_t_max = 16
+dim_t_shf = 16
 power = 1
