--- a/config.ini
+++ b/config.ini
@@ -57,7 +57,7 @@ n_fft = 1724
 win_length = 1724
 hop_length = 128
 window_fn = blackman
-dim_f = 513
+dim_f = 863
 dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
@@ -87,7 +87,7 @@ n_fft = 1724
 win_length = 1724
 hop_length = 128
 window_fn = blackman
-dim_f = 513
+dim_f = 863
 dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
@@ -101,4 +101,49 @@ dim_f = 513
 dim_t = 16
 dim_t_max = 16
 dim_t_shf = 16
+power = 1
+
+[ADFA]
+feature_name = adfa
+feature_folder = flac
+file_extension = flac
+samplerate = 16000
+n_fft = 1724
+win_length = 1724
+hop_length = 128
+window_fn = blackman
+dim_f = 863
+dim_t = 600
+dim_t_max = 3700
+dim_t_shf = 300
+power = 1
+
+[MDFA]
+feature_name = mdfa
+feature_folder = flac
+file_extension = flac
+samplerate = 16000
+n_fft = 1724
+win_length = 1724
+hop_length = 128
+window_fn = blackman
+dim_f = 863
+dim_t = 600
+dim_t_max = 3700
+dim_t_shf = 300
+power = 1
+
+[CQA]
+feature_name = cqa
+feature_folder = flac
+file_extension = flac
+samplerate = 16000
+n_fft = 1724
+win_length = 1724
+hop_length = 128
+window_fn = blackman
+dim_f = 863
+dim_t = 600
+dim_t_max = 3700
+dim_t_shf = 300
 power = 1
