update for submission

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 0
 
 [LFCC]
 feature_name = npy_lfcc
@@ -17,6 +18,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 0
 
 [DCT]
 feature_name = dctgram
@@ -32,6 +34,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 0
 
 [Spec]
 feature_name = spectrogram
@@ -47,6 +50,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 0
 
 [Spec1724]
 feature_name = spectrogram
@@ -62,6 +66,23 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 0
+
+[Log-Spec1724]
+feature_name = spectrogram
+feature_folder = flac
+file_extension = flac
+samplerate = 16000
+n_fft = 1724
+win_length = 1724
+hop_length = 128
+window_fn = blackman
+dim_f = 863
+dim_t = 600
+dim_t_max = 3700
+dim_t_shf = 300
+power = 1
+log = 1
 
 [Ceps]
 feature_name = cepstrogram
@@ -77,6 +98,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 0
 
 [Ceps1724]
 feature_name = cepstrogram
@@ -92,6 +114,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 0
 
 [TAC]
 feature_name = npy_TAC
@@ -102,6 +125,40 @@ dim_t = 16
 dim_t_max = 16
 dim_t_shf = 16
 power = 1
+log = 0
+
+[ATAC]
+feature_name = npy_ATAC
+feature_folder = npy_ATAC
+file_extension = npy
+dim_f = 513
+dim_t = 16
+dim_t_max = 16
+dim_t_shf = 16
+power = 1
+log = 0
+
+[MTAC]
+feature_name = npy_MTAC
+feature_folder = npy_MTAC
+file_extension = npy
+dim_f = 513
+dim_t = 16
+dim_t_max = 16
+dim_t_shf = 16
+power = 1
+log = 0
+
+[QTAC]
+feature_name = npy_QTAC
+feature_folder = npy_QTAC
+file_extension = npy
+dim_f = 513
+dim_t = 16
+dim_t_max = 16
+dim_t_shf = 16
+power = 1
+log = 0
 
 [ADFA]
 feature_name = adfa
@@ -117,6 +174,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 1
 
 [MDFA]
 feature_name = mdfa
@@ -132,9 +190,10 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 1
 
-[CQA]
-feature_name = cqa
+[CQFA]
+feature_name = cqfa
 feature_folder = flac
 file_extension = flac
 samplerate = 16000
@@ -147,5 +206,7 @@ dim_t = 600
 dim_t_max = 3700
 dim_t_shf = 300
 power = 1
+log = 1
 base = 2
-bins = 64
+bins = 96
+
